--- a/bio.html
+++ b/bio.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
-<p> Dr. Songze Li joins Hong Kong University of Science and Technology as an assistant professor in 2020. Before that, Dr. Li worked as a researcher at Stanford University on designing, analyzing, and implementing efficient and scalable blockchain consensus protocols. Prior to that, Dr. Li spent a year as a research scientist with Applied Protocol Research, where he worked on scalable sharding solutions for blockchains and efficient verification of data availability in blockchain systems. Dr. Li received his Ph.D. degree from University of Southern California in 2018, and his B.Sc. degree from New York University in 2011, both in electrical engineering. </p>
+<p>
+Dr. Songze Li is an assistant professor at the Internet of Things thrust in HKUST (GZ), and an affiliate assistant professor at CSE department in HKUST (CWB). Before joining HKUST in 2020, Dr. Li worked as a researcher at Stanford University. Prior to that, Dr. Li spent a year as a research scientist with Applied Protocol Research. Dr. Li received his Ph.D. degree from University of Southern California in 2018, and his B.Sc. degree from New York University in 2011, both in electrical engineering.
+</p>
 
-<p> Dr. Li's research interests lie on the intersection of theory and system of designing efficient, scalable, and secure distributed computing solutions for machine learning and blockchains. Among his major contributions, he first introduced leveraging techniques from information/coding theory to design distributed computing algorithms, which opened up a new research direction of designing codes for speeding up computations. Dr. Li received USC Viterbi School of Engineering Doctoral Fellowship in 2011. He is among Qualcomm Innovation Fellowship Finalists in 2017. </p>
+<p>
+Dr. Li’s current research interest is on developing secure, scalable, and accurate distributed computing and learning solutions, mainly focused on the areas of federated learning and blockchains.
+<!-- Dr. Li has received a number of awards for his research.  -->
+Dr. Li was Qualcomm Innovation Fellowship finalist in 2017. He received the Best Paper Award at NeurIPS-20 Workshop on Scalability, Privacy, and Security in Federated Learning.
+</p>
 
 <!-- We are hiring! If you are interested in designing and developing secure and efficient algorithms and software for distributed (federated) machine learning or blockchains, feel free to drop me an email at songzeli [at] ust [dot] hk. -->
 </html>
